Add Class GUI, Skills GUI, Price GUI